[gd_scene load_steps=14 format=3 uid="uid://dnhlb0ymyhwao"]

[ext_resource type="Texture2D" uid="uid://bvl7khg16sr3x" path="res://assets/models/mechanicals/ld53_mechanics_bronze-palette-1x.png" id="1_6l388"]
[ext_resource type="Script" path="res://entities/mechanicals/button.gd" id="1_otvu6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w7vrt"]
resource_name = "BronzePalette"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("1_6l388")
roughness = 0.5
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_g4k65"]
_surfaces = [{
"aabb": AABB(-1, 0, -1, 2, 0.2, 2.00001),
"format": 4097,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0, 2, 0, 7, 0, 3, 0, 2, 0, 6, 0, 7, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 5, 0, 4, 0, 1, 0, 5, 0, 4, 0, 0, 0, 1, 0, 2, 0, 4, 0, 6, 0, 2, 0, 0, 0, 4, 0, 7, 0, 1, 0, 3, 0, 7, 0, 5, 0, 1, 0),
"name": "BronzePalette",
"primitive": 3,
"vertex_count": 8,
"vertex_data": PackedByteArray(0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 191, 203, 204, 76, 62, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 191, 203, 204, 76, 62, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 203, 204, 76, 62, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 63, 203, 204, 76, 62, 0, 0, 128, 191)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_etin1"]
resource_name = "ld53_mechanics_Cube"
_surfaces = [{
"aabb": AABB(-1, 0, -1, 2, 0.2, 2.00001),
"attribute_data": PackedByteArray(227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62, 227, 45, 12, 63, 216, 245, 250, 62),
"format": 4119,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 9, 0, 3, 0, 0, 0, 6, 0, 9, 0, 8, 0, 21, 0, 10, 0, 8, 0, 19, 0, 21, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 13, 0, 4, 0, 15, 0, 13, 0, 2, 0, 4, 0, 7, 0, 12, 0, 18, 0, 7, 0, 1, 0, 12, 0, 22, 0, 5, 0, 11, 0, 22, 0, 16, 0, 5, 0),
"material": SubResource("StandardMaterial3D_w7vrt"),
"name": "BronzePalette",
"primitive": 3,
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 255, 127, 255, 127, 255, 255, 255, 63, 0, 0, 128, 191, 203, 204, 76, 62, 0, 0, 128, 63, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 128, 191, 203, 204, 76, 62, 0, 0, 128, 63, 255, 127, 255, 127, 255, 255, 255, 63, 0, 0, 128, 191, 203, 204, 76, 62, 0, 0, 128, 63, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 255, 255, 255, 255, 255, 255, 255, 191, 0, 0, 128, 191, 203, 204, 76, 62, 0, 0, 128, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 128, 191, 203, 204, 76, 62, 0, 0, 128, 191, 255, 255, 255, 255, 255, 255, 255, 191, 0, 0, 128, 191, 203, 204, 76, 62, 0, 0, 128, 191, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 255, 127, 255, 127, 255, 255, 255, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 255, 255, 255, 127, 255, 255, 255, 191, 0, 0, 128, 63, 203, 204, 76, 62, 0, 0, 128, 63, 255, 127, 255, 127, 255, 255, 255, 63, 0, 0, 128, 63, 203, 204, 76, 62, 0, 0, 128, 63, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 128, 63, 203, 204, 76, 62, 0, 0, 128, 63, 255, 255, 255, 127, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 255, 255, 255, 255, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 255, 255, 255, 127, 255, 255, 255, 191, 0, 0, 128, 63, 203, 204, 76, 62, 0, 0, 128, 191, 255, 255, 255, 255, 255, 255, 255, 191, 0, 0, 128, 63, 203, 204, 76, 62, 0, 0, 128, 191, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 128, 63, 203, 204, 76, 62, 0, 0, 128, 191, 255, 255, 255, 127, 255, 255, 255, 191)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_g4k65")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_w4qu7"]
data = PackedVector3Array(-1, 0, 1, -1, 0.2, -1, -1, 0.2, 1, -1, 0, 1, -1, 0, -1, -1, 0.2, -1, -1, 0, -1, 1, 0.2, -1, -1, 0.2, -1, -1, 0, -1, 1, 0, -1, 1, 0.2, -1, 1, 0, -1, 1, 0.2, 1, 1, 0.2, -1, 1, 0, -1, 1, 0, 1, 1, 0.2, 1, 1, 0, 1, -1, 0.2, 1, 1, 0.2, 1, 1, 0, 1, -1, 0, 1, -1, 0.2, 1, -1, 0, -1, 1, 0, 1, 1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0.2, -1, -1, 0.2, 1, -1, 0.2, -1, 1, 0.2, -1, 1, 0.2, 1, -1, 0.2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ubt1i"]
size = Vector3(2, 2, 2)

[sub_resource type="ArrayMesh" id="ArrayMesh_j7gwy"]
_surfaces = [{
"aabb": AABB(-3.0036, -1, -3.0036, 6.00719, 2, 6.00719),
"format": 4097,
"index_count": 84,
"index_data": PackedByteArray(7, 0, 15, 0, 5, 0, 7, 0, 13, 0, 15, 0, 0, 0, 14, 0, 4, 0, 0, 0, 9, 0, 14, 0, 3, 0, 13, 0, 7, 0, 3, 0, 11, 0, 13, 0, 4, 0, 12, 0, 6, 0, 4, 0, 14, 0, 12, 0, 2, 0, 4, 0, 6, 0, 2, 0, 0, 0, 4, 0, 7, 0, 1, 0, 3, 0, 7, 0, 5, 0, 1, 0, 9, 0, 11, 0, 10, 0, 9, 0, 8, 0, 11, 0, 8, 0, 13, 0, 11, 0, 8, 0, 12, 0, 13, 0, 12, 0, 15, 0, 13, 0, 12, 0, 14, 0, 15, 0, 14, 0, 10, 0, 15, 0, 14, 0, 9, 0, 10, 0, 6, 0, 8, 0, 2, 0, 6, 0, 12, 0, 8, 0, 1, 0, 11, 0, 3, 0, 1, 0, 10, 0, 11, 0, 5, 0, 10, 0, 1, 0, 5, 0, 15, 0, 10, 0, 2, 0, 9, 0, 0, 0, 2, 0, 8, 0, 9, 0),
"lods": [1.47803, PackedByteArray(10, 0, 11, 0, 13, 0, 13, 0, 15, 0, 10, 0, 9, 0, 11, 0, 10, 0, 9, 0, 8, 0, 11, 0, 8, 0, 13, 0, 11, 0, 8, 0, 12, 0, 13, 0, 12, 0, 15, 0, 13, 0, 12, 0, 14, 0, 15, 0, 14, 0, 10, 0, 15, 0, 14, 0, 9, 0, 10, 0, 12, 0, 8, 0, 14, 0, 14, 0, 8, 0, 9, 0)],
"name": "BronzePalette",
"primitive": 3,
"vertex_count": 16,
"vertex_data": PackedByteArray(0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 236, 58, 64, 192, 0, 0, 128, 191, 236, 58, 64, 192, 236, 58, 64, 192, 0, 0, 128, 191, 236, 58, 64, 64, 236, 58, 64, 192, 0, 0, 128, 63, 236, 58, 64, 64, 236, 58, 64, 192, 0, 0, 128, 63, 236, 58, 64, 192, 236, 58, 64, 64, 0, 0, 128, 191, 236, 58, 64, 192, 236, 58, 64, 64, 0, 0, 128, 63, 236, 58, 64, 192, 236, 58, 64, 64, 0, 0, 128, 191, 236, 58, 64, 64, 236, 58, 64, 64, 0, 0, 128, 63, 236, 58, 64, 64)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_noyxa"]
resource_name = "ld53_mechanics_Cube002"
_surfaces = [{
"aabb": AABB(-3.0036, -1, -3.0036, 6.00719, 2, 6.00719),
"attribute_data": PackedByteArray(214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63, 214, 10, 219, 62, 61, 143, 7, 63),
"format": 4119,
"index_count": 84,
"index_data": PackedByteArray(13, 0, 40, 0, 9, 0, 13, 0, 33, 0, 40, 0, 0, 0, 37, 0, 8, 0, 0, 0, 20, 0, 37, 0, 5, 0, 35, 0, 14, 0, 5, 0, 28, 0, 35, 0, 8, 0, 30, 0, 12, 0, 8, 0, 37, 0, 30, 0, 4, 0, 8, 0, 12, 0, 4, 0, 0, 0, 8, 0, 15, 0, 2, 0, 6, 0, 15, 0, 11, 0, 2, 0, 19, 0, 26, 0, 22, 0, 19, 0, 16, 0, 26, 0, 18, 0, 34, 0, 27, 0, 18, 0, 31, 0, 34, 0, 32, 0, 43, 0, 36, 0, 32, 0, 39, 0, 43, 0, 38, 0, 23, 0, 41, 0, 38, 0, 21, 0, 23, 0, 12, 0, 17, 0, 4, 0, 12, 0, 30, 0, 17, 0, 3, 0, 29, 0, 7, 0, 3, 0, 25, 0, 29, 0, 10, 0, 24, 0, 1, 0, 10, 0, 42, 0, 24, 0, 4, 0, 20, 0, 0, 0, 4, 0, 17, 0, 20, 0),
"lods": [1.47803, PackedByteArray(24, 0, 28, 0, 33, 0, 33, 0, 40, 0, 24, 0, 19, 0, 26, 0, 22, 0, 19, 0, 16, 0, 26, 0, 18, 0, 34, 0, 27, 0, 18, 0, 31, 0, 34, 0, 32, 0, 43, 0, 36, 0, 32, 0, 39, 0, 43, 0, 38, 0, 23, 0, 41, 0, 38, 0, 21, 0, 23, 0, 30, 0, 17, 0, 37, 0, 37, 0, 17, 0, 20, 0)],
"material": SubResource("StandardMaterial3D_w7vrt"),
"name": "BronzePalette",
"primitive": 3,
"vertex_count": 44,
"vertex_data": PackedByteArray(0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 156, 170, 255, 255, 255, 255, 255, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 156, 170, 97, 213, 255, 255, 255, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 255, 127, 97, 213, 255, 255, 255, 63, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 156, 170, 97, 213, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 98, 85, 97, 213, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 156, 170, 255, 255, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 98, 85, 97, 213, 255, 255, 255, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 255, 127, 97, 213, 255, 255, 255, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 255, 127, 255, 255, 255, 255, 255, 191, 236, 58, 64, 192, 0, 0, 128, 191, 236, 58, 64, 192, 0, 0, 255, 127, 255, 255, 255, 191, 236, 58, 64, 192, 0, 0, 128, 191, 236, 58, 64, 192, 255, 127, 0, 0, 255, 255, 255, 191, 236, 58, 64, 192, 0, 0, 128, 191, 236, 58, 64, 192, 255, 255, 255, 255, 255, 255, 255, 191, 236, 58, 64, 192, 0, 0, 128, 191, 236, 58, 64, 64, 0, 0, 255, 127, 255, 255, 255, 191, 236, 58, 64, 192, 0, 0, 128, 191, 236, 58, 64, 64, 255, 127, 0, 0, 255, 255, 255, 191, 236, 58, 64, 192, 0, 0, 128, 191, 236, 58, 64, 64, 255, 127, 255, 127, 255, 255, 255, 63, 236, 58, 64, 192, 0, 0, 128, 63, 236, 58, 64, 64, 0, 0, 255, 127, 255, 255, 255, 191, 236, 58, 64, 192, 0, 0, 128, 63, 236, 58, 64, 64, 255, 127, 255, 127, 255, 255, 255, 63, 236, 58, 64, 192, 0, 0, 128, 63, 236, 58, 64, 64, 156, 170, 255, 255, 255, 255, 255, 191, 236, 58, 64, 192, 0, 0, 128, 63, 236, 58, 64, 64, 156, 170, 97, 213, 255, 255, 255, 191, 236, 58, 64, 192, 0, 0, 128, 63, 236, 58, 64, 192, 0, 0, 255, 127, 255, 255, 255, 191, 236, 58, 64, 192, 0, 0, 128, 63, 236, 58, 64, 192, 255, 255, 255, 255, 255, 255, 255, 191, 236, 58, 64, 192, 0, 0, 128, 63, 236, 58, 64, 192, 255, 127, 97, 213, 255, 255, 255, 63, 236, 58, 64, 192, 0, 0, 128, 63, 236, 58, 64, 192, 156, 170, 97, 213, 255, 255, 255, 191, 236, 58, 64, 64, 0, 0, 128, 191, 236, 58, 64, 192, 255, 127, 0, 0, 255, 255, 255, 191, 236, 58, 64, 64, 0, 0, 128, 191, 236, 58, 64, 192, 255, 255, 255, 255, 255, 255, 255, 191, 236, 58, 64, 64, 0, 0, 128, 191, 236, 58, 64, 192, 255, 255, 255, 127, 255, 255, 255, 191, 236, 58, 64, 64, 0, 0, 128, 63, 236, 58, 64, 192, 98, 85, 97, 213, 255, 255, 255, 191, 236, 58, 64, 64, 0, 0, 128, 63, 236, 58, 64, 192, 255, 255, 255, 255, 255, 255, 255, 191, 236, 58, 64, 64, 0, 0, 128, 63, 236, 58, 64, 192, 255, 127, 97, 213, 255, 255, 255, 63, 236, 58, 64, 64, 0, 0, 128, 63, 236, 58, 64, 192, 255, 255, 255, 127, 255, 255, 255, 191, 236, 58, 64, 64, 0, 0, 128, 191, 236, 58, 64, 64, 255, 127, 0, 0, 255, 255, 255, 191, 236, 58, 64, 64, 0, 0, 128, 191, 236, 58, 64, 64, 255, 127, 255, 127, 255, 255, 255, 63, 236, 58, 64, 64, 0, 0, 128, 191, 236, 58, 64, 64, 255, 255, 255, 127, 255, 255, 255, 191, 236, 58, 64, 64, 0, 0, 128, 63, 236, 58, 64, 64, 98, 85, 97, 213, 255, 255, 255, 191, 236, 58, 64, 64, 0, 0, 128, 63, 236, 58, 64, 64, 255, 127, 255, 127, 255, 255, 255, 63, 236, 58, 64, 64, 0, 0, 128, 63, 236, 58, 64, 64, 156, 170, 255, 255, 255, 255, 255, 191, 236, 58, 64, 64, 0, 0, 128, 63, 236, 58, 64, 64, 255, 255, 255, 127, 255, 255, 255, 191)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_j7gwy")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_q64t8"]
data = PackedVector3Array(1, 0, -1, 3.0036, 1, 3.0036, 1, 0, 1, 1, 0, -1, 3.0036, 1, -3.0036, 3.0036, 1, 3.0036, -1, -1, 1, 3.0036, -1, 3.0036, 1, -1, 1, -1, -1, 1, -3.0036, -1, 3.0036, 3.0036, -1, 3.0036, -1, 0, -1, 3.0036, 1, -3.0036, 1, 0, -1, -1, 0, -1, -3.0036, 1, -3.0036, 3.0036, 1, -3.0036, 1, -1, 1, 3.0036, -1, -3.0036, 1, -1, -1, 1, -1, 1, 3.0036, -1, 3.0036, 3.0036, -1, -3.0036, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1, 1, 0, 1, -1, 0, 1, -3.0036, -1, 3.0036, -3.0036, 1, -3.0036, -3.0036, 1, 3.0036, -3.0036, -1, 3.0036, -3.0036, -1, -3.0036, -3.0036, 1, -3.0036, -3.0036, -1, -3.0036, 3.0036, 1, -3.0036, -3.0036, 1, -3.0036, -3.0036, -1, -3.0036, 3.0036, -1, -3.0036, 3.0036, 1, -3.0036, 3.0036, -1, -3.0036, 3.0036, 1, 3.0036, 3.0036, 1, -3.0036, 3.0036, -1, -3.0036, 3.0036, -1, 3.0036, 3.0036, 1, 3.0036, 3.0036, -1, 3.0036, -3.0036, 1, 3.0036, 3.0036, 1, 3.0036, 3.0036, -1, 3.0036, -3.0036, -1, 3.0036, -3.0036, 1, 3.0036, 1, -1, -1, -3.0036, -1, -3.0036, -1, -1, -1, 1, -1, -1, 3.0036, -1, -3.0036, -3.0036, -1, -3.0036, -1, 0, 1, -3.0036, 1, -3.0036, -1, 0, -1, -1, 0, 1, -3.0036, 1, 3.0036, -3.0036, 1, -3.0036, 1, 0, 1, -3.0036, 1, 3.0036, -1, 0, 1, 1, 0, 1, 3.0036, 1, 3.0036, -3.0036, 1, 3.0036, -1, -1, -1, -3.0036, -1, 3.0036, -1, -1, 1, -1, -1, -1, -3.0036, -1, -3.0036, -3.0036, -1, 3.0036)

[sub_resource type="Animation" id="Animation_fb27x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ld53_mechanics/ButtonStatic:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_b7ukt"]
resource_name = "button_press"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ld53_mechanics/ButtonStatic:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.156213, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2p8dr"]
_data = {
"RESET": SubResource("Animation_fb27x"),
"button_press": SubResource("Animation_b7ukt")
}

[node name="Button" type="Node3D"]
script = ExtResource("1_otvu6")

[node name="ld53_mechanics" type="Node3D" parent="."]

[node name="ButtonStatic" type="StaticBody3D" parent="ld53_mechanics"]

[node name="Button" type="MeshInstance3D" parent="ld53_mechanics/ButtonStatic"]
mesh = SubResource("ArrayMesh_etin1")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ld53_mechanics/ButtonStatic"]
shape = SubResource("ConcavePolygonShape3D_w4qu7")

[node name="ButtonDetection" type="Area3D" parent="ld53_mechanics/ButtonStatic"]
collision_mask = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="ld53_mechanics/ButtonStatic/ButtonDetection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.409865, 0)
shape = SubResource("BoxShape3D_ubt1i")

[node name="TrayStatic" type="StaticBody3D" parent="ld53_mechanics"]

[node name="ButtonTray" type="MeshInstance3D" parent="ld53_mechanics/TrayStatic"]
mesh = SubResource("ArrayMesh_noyxa")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ld53_mechanics/TrayStatic"]
shape = SubResource("ConcavePolygonShape3D_q64t8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2p8dr")
}
